{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 2135,
  "lineage": "2c56a956-9d2c-cd1f-6df6-cb53b4ff5edc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c7d2ed44815cdd49",
            "domain": "vpc",
            "id": "eipalloc-06358cca1b56dab61",
            "instance": "i-0e6590d1814b00156",
            "network_interface": "eni-0aeb96fdc2ac1a371",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-34-224-234-60.compute-1.amazonaws.com",
            "public_ip": "34.224.234.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #001"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ec9145e7275933fe",
            "domain": "vpc",
            "id": "eipalloc-006f974f982ae92a5",
            "instance": "i-058773cbca4eb0b65",
            "network_interface": "eni-095cc2548e2e771a5",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-233-50-185.compute-1.amazonaws.com",
            "public_ip": "3.233.50.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #002"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05ee4a8ead36c0ae1",
            "domain": "vpc",
            "id": "eipalloc-0ce98240aa17391a5",
            "instance": "i-041bc2ff1071939cb",
            "network_interface": "eni-06ad580ff1e04809d",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_ip": "10.0.3.10",
            "public_dns": "ec2-3-213-107-3.compute-1.amazonaws.com",
            "public_ip": "3.213.107.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP #003"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423750041257:loadbalancer/elb-001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 10,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-001-1118548658.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 4
              }
            ],
            "id": "elb-001",
            "idle_timeout": 30,
            "instances": [
              "i-041bc2ff1071939cb",
              "i-058773cbca4eb0b65",
              "i-0e6590d1814b00156"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-001",
            "security_groups": [
              "sg-084f6557e546ae0b6"
            ],
            "source_security_group": "423750041257/sg_generic",
            "source_security_group_id": "sg-084f6557e546ae0b6",
            "subnets": [
              "subnet-034f73b6fcaebf281",
              "subnet-0d9a09f5f13d37ce5",
              "subnet-0e9f6e349b16230c2"
            ],
            "tags": {
              "Name": "elb-001"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.ec2_generic",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_generic",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-0e6590d1814b00156",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6590d1814b00156",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aeb96fdc2ac1a371",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-34-224-234-60.compute-1.amazonaws.com",
            "public_ip": "34.224.234.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09a7d7e917c4e1742",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9a09f5f13d37ce5",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #001",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084f6557e546ae0b6"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_key_pair.kp_002",
            "aws_key_pair.kp_003",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-058773cbca4eb0b65",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058773cbca4eb0b65",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_002",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095cc2548e2e771a5",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-233-50-185.compute-1.amazonaws.com",
            "public_ip": "3.233.50.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05dc3afd93d9dabda",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9f6e349b16230c2",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #002",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084f6557e546ae0b6"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_key_pair.kp_002",
            "aws_key_pair.kp_003",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:423750041257:instance/i-041bc2ff1071939cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041bc2ff1071939cb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_003",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ad580ff1e04809d",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_ip": "10.0.3.10",
            "public_dns": "ec2-3-213-107-3.compute-1.amazonaws.com",
            "public_ip": "3.213.107.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1813718b330da58",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034f73b6fcaebf281",
            "tags": {
              "Env": "Desarrollo",
              "Name": "INST. (EC2) #003",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084f6557e546ae0b6"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_001",
            "aws_key_pair.kp_002",
            "aws_key_pair.kp_003",
            "aws_security_group.sg_generic",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02691bf33f6fff339",
            "owner_id": "423750041257",
            "tags": {
              "Name": "INTERNET-GATEWAY #001"
            },
            "vpc_id": "vpc-098a99cc54c34de1d"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-097863c3d7eddc6fa",
            "owner_id": "423750041257",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02691bf33f6fff339",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ROUTE-TABLE #001"
            },
            "vpc_id": "vpc-098a99cc54c34de1d"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d076ecf35d3f803",
            "route_table_id": "rtb-097863c3d7eddc6fa",
            "subnet_id": "subnet-0d9a09f5f13d37ce5"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_002",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086cf47f8b6c1334f",
            "route_table_id": "rtb-097863c3d7eddc6fa",
            "subnet_id": "subnet-0e9f6e349b16230c2"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assign_sn_to_rt_003",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098c7b8962dad6f29",
            "route_table_id": "rtb-097863c3d7eddc6fa",
            "subnet_id": "subnet-034f73b6fcaebf281"
          },
          "dependencies": [
            "aws_internet_gateway.igw_001",
            "aws_route_table.rt_001",
            "aws_subnet.sn_generic",
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_generic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:security-group/sg-084f6557e546ae0b6",
            "description": "IMPORTANTE: permite acceso = SSH - HTTP - HTTPs - TOMCAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084f6557e546ae0b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_generic",
            "name_prefix": null,
            "owner_id": "423750041257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SECURITY-GROUP #001"
            },
            "timeouts": null,
            "vpc_id": "vpc-098a99cc54c34de1d"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_generic",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-0d9a09f5f13d37ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d9a09f5f13d37ce5",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #001"
            },
            "vpc_id": "vpc-098a99cc54c34de1d"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-0e9f6e349b16230c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e9f6e349b16230c2",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #002"
            },
            "vpc_id": "vpc-098a99cc54c34de1d"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:subnet/subnet-034f73b6fcaebf281",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-034f73b6fcaebf281",
            "map_public_ip_on_launch": true,
            "owner_id": "423750041257",
            "tags": {
              "Name": "SUBNET #003"
            },
            "vpc_id": "vpc-098a99cc54c34de1d"
          },
          "dependencies": [
            "aws_vpc.vpc_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_001",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423750041257:vpc/vpc-098a99cc54c34de1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0341ca06c468eab4c",
            "default_route_table_id": "rtb-07f22759d63de8d63",
            "default_security_group_id": "sg-0ee691fb75c0bd80e",
            "dhcp_options_id": "dopt-19c36463",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-098a99cc54c34de1d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07f22759d63de8d63",
            "owner_id": "423750041257",
            "tags": {
              "Name": "VPC #001"
            }
          }
        }
      ]
    }
  ]
}